Stop gc logs piling up (#437)